--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -2,7 +2,7 @@ name: "prod deploy"
 on:
   push:
    branches:
-    - "prod"
+    - "dev"
 permitions:
   id-token: write
   contents: read
@@ -11,7 +11,7 @@ jobs:
   terraform: 
     uses: ./.github/workflows/terraform.yml
     with:
-      envireoment: prod 
+      envireoment: dev 
       aws-assume-role-arn: "arn:aws:iam::730335614976:role/github-actions-ddii596-pipeline"
       aws-region: "us-east-1"
       inputs.aws-statefile-s3-bucket: "ddii596-lab-terraform-statefile"
