corrigindo erro de sintax no terraform.yml  linha 26

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,7 +23,7 @@
     terraform:
       runs-on: ubuntu-lastest
       defaults:
-        runs: 
+        run: 
           shell: bash
     
       steps:
