--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,7 +14,7 @@
         aws-lock-dynamodb-table:
           type: string
           required: true
-        aws-statefile-s3bucket:
+        aws-statefile-s3-bucket:
           type: string
           required: true
 
