--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,20 @@
-name: "prod deploy"
+name: "prod DEPLOY"
+
 on:
   push:
-   branches:
-    - "prod"
+    branches:
+      - prod
+
 permissions:
   id-token: write
   contents: read
 
 jobs:
-  terraform: 
+  terraform:
     uses: ./.github/workflows/terraform.yml
     with:
-      envireoment: prod 
+      environment: prod
       aws-assume-role-arn: "arn:aws:iam::730335614976:role/github-actions-ddii596-pipeline"
       aws-region: "us-east-1"
-      inputs.aws-statefile-s3-bucket: "ddii596-lab-terraform-statefile"
+      aws-statefile-s3-bucket: "ddii596-lab-terraform-statefile"
       aws-lock-dynamodb-table: "ddii596-lab-terraform-lock"
